--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,12 @@
     <link href="https://fonts.googleapis.com/css?family=Caveat:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500i&display=swap" rel="stylesheet">
 
+    <script>
+
+       
+
+
+    </script>
 
 </head>
 
